Blocking event identification cleanup/testing.